Bug 137505 - FILEOPEN XLSX CHART: Custom shape's text in chart is bigger as should be
Summary: FILEOPEN XLSX CHART: Custom shape's text in chart is bigger as should be
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.1.0
Keywords: filter:xlsx
: 83159 (view as bug list)
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-10-15 13:40 UTC by NISZ LibreOffice Team
Modified: 2021-11-05 11:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with a chart and shape with some text (14.56 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-10-15 13:41 UTC, NISZ LibreOffice Team
Details
File in Excel and LO side by side (278.27 KB, image/jpeg)
2020-10-15 13:42 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-15 13:40:02 UTC
Description:
When we insert a shape in a chart and we enter some text in it the default text size in MSO is 11. If we change the text size in MSO then LO can't read it in. So LO will change the default text size to 12. But in Chart it didnt work so LO change the default text size to 24

Steps to Reproduce:
1.Open attached file in Calc
2.Open attached file in Excel
3.

Actual Results:
Text in the shape is 24

Expected Results:
Text in the shape should be 12


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: c064766901722082df0d759c95434c1460fcdba5
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2020-10-15 13:41:16 UTC
Created attachment 166385 [details]
Example file with a chart and shape with some text
Comment 2 NISZ LibreOffice Team 2020-10-15 13:42:43 UTC
Created attachment 166386 [details]
File in Excel and LO side by side
Comment 3 Commit Notification 2020-10-26 08:15:31 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0f0a5b63b19196f9463149a0a1991704c940efe2

tdf#137505 OOXML Import: Custom shape in chart: fix font size

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2020-11-11 15:09:46 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a689cf1672e89cb78fbcfa14c505850927e71f58
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!
Comment 5 Justin L 2020-11-17 08:17:39 UTC
*** Bug 83159 has been marked as a duplicate of this bug. ***