tdf#137505 OOXML Import: Custom shape in chart: fix font size

The default font size of text in shapes is 12pt in LibreOffice,
nevertheless, we used 24 pt for font size in custom shapes inside
chart objects during ooxml import.

Change-Id: I69d02374bc4b4781e2ca617913c642999b3d5fa6